public static class Statics
{
    public static string TAG_PLAYER = "Player";

    public const string SCENE_LEVEL1 = "Level1";
    public const string SCENE_LEVEL2 = "Level2";
    public const string SCENE_LEVEL3 = "Level3";
    public const string SCENE_LOADING = "Loading";

    public static string LAYER_MASK_HEXTILE = "HexTile";

    public static string ANIMATION_TRIGGER_START_ANIMATION_SCENE = "Start"; // voor starten van scene

    public static string ANIMATION_BOOL_RUN = "RUN";
    public static string ANIMATION_BOOL_WALK = "WALK";
    public static string ANIMATION_BOOL_HOP = "HOP";
    public static string ANIMATION_BOOL_DANCE = "DANCE";

    public static string ANIMATION_TRIGGER_DIE = "DIE";
    public static string ANIMATION_TRIGGER_PICKUP = "PICKUP";
    public static string ANIMATION_TRIGGER_ATTACK = "ATTACK";
    public static string ANIMATION_TRIGGER_WAVE = "WAVE";
    public static string ANIMATION_TRIGGER_SPINNING = "SPINNING";

    public static string ANIMATION_TRIGGER_ACTIVATE = "ACTIVATE";
    public static string ANIMATION_TRIGGER_DEACTIVATE = "DEACTIVATE";

    public static string RESOURCE_PATH_GO_TILE_STRUCTURES = "Hex/TileStructures";
    public static string RESOURCE_PATH_GO_PIECES = "Pieces";
    public static string RESOURCE_PATH_GO_OBJ_ON_TILE = "ObjectsOnTile";
    public static string RESOURCE_PATH_GO_PLAYER_UTIL = "UtilsForPlayer";
    public static string RESOURCE_PATH_GO_GUI = "GUI";

    public static string RESOURCE_PATH_MATERIAL_TILE_TYPES = "Hex/HexTypeMaterials";
    public static string RESOURCE_PATH_MATERIAL_COLORS = "Colors";

    public static string RESOURCE_PATH_SPRITE_ABILITY = "Sprites/Ability";
}